--- a/backend/file-upload-frontend/src/pages/App2.css
+++ b/backend/file-upload-frontend/src/pages/App2.css
@@ -235,7 +235,15 @@ body {
   .pdf-preview::-webkit-scrollbar-track {
     background-color: #f1f1f1;
   }
+  .pdf-page.portrait .pdf-canvas {
+    transform: rotate(0deg); /* Default */
+  }
   
+  .pdf-page.landscape .pdf-canvas {
+    transform: rotate(0deg); /* Rotate canvas for landscape */
+  }
+  
+
   /* Responsive Adjustments */
   @media (max-width: 768px) {
     .pdf-preview {
